# programmers-c-coding-test-study

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cspell.json  run-clang-format.bat  settings.properties  toolchain.cmake
CommonUtils/: CMakeLists.txt  CommonUtils.c  CommonUtils.h
docs/: Git-Bash 터미널 환경변수 설정.md  GoogleTest의 Matcher.md  Parametrize Tests 예제.md  cpp_string_view_vs_const_string_ref.md  push_back과 emplace_back의 차이.md  windows-clang-빌드-메모.md  컴파일 도구들의 절대경로 처리 개선 요청 (Cursor AI).md  프로젝트 빌드 설정.md  프로젝트-설정-빌드-테스트-프리셋.md
lv00/: CMakeLists.txt  Exam000_00000.c  Exam000_00000_test.cpp  Exam001_00001.c  Exam001_250129.cpp  Exam001_250129_test.cpp  Exam002_250130.cpp  Exam002_250130_test.cpp  Exam003_250132.cpp  Exam003_250132_test.cpp  Exam004_340204.cpp  Exam004_340204_test.cpp  Exam005_250131.cpp  Exam005_250131_test.cpp  Exam006_250127.cpp  Exam006_250127_test.cpp  Exam007_340203.cpp  Exam007_340203_test.cpp  Exam008_340206.cpp  Exam008_340206_test.cpp  Exam009_340200.cpp  Exam009_340200_test.cpp  Exam010_250128.cpp  Exam010_250128_test.cpp  Exam011_340205.cpp  Exam011_340205_test.cpp  Exam012_340207.cpp  Exam012_340207_test.cpp  Exam013_250133.cpp  Exam013_250133_test.cpp  Exam014_250126.cpp  Exam014_250126_test.cpp  Exam015_340202.cpp  Exam015_340202_test.cpp  Exam016_340201.cpp  Exam016_340201_test.cpp
lv01/: CMakeLists.txt  Exam001_258712.cpp  Exam001_258712_test.cpp  Exam002_64061.cpp  Exam002_64061_test.cpp  Exam003_92334.cpp  Exam003_92334_test.cpp
lv02/: CMakeLists.txt  Exam001_42842.cpp  Exam001_42842_test.cpp  Exam002_87377.cpp  Exam002_87377_test.cpp  Exam003_12949.cpp  Exam003_12949_test.cpp  Exam004_68645.cpp  Exam004_68645_test.cpp  Exam005_81302.cpp  Exam005_81302_test.cpp  Exam006_42840.cpp  Exam006_42840_test.cpp  Exam007_42888.cpp  Exam007_42888_test.cpp  Exam008_72411.cpp  Exam008_72411_test.cpp
lv03/: CMakeLists.txt  Exam001_42579.cpp  Exam001_42579_test.cpp
practice/: CMakeLists.txt  Prac000_000.cpp  Prac000_000_test.cpp
toolchains/: common_paths.cmake  default_paths.cmake  mingw.cmake  windows-clang.cmake
